style(blog): fix overflowing code-block

--- a/src/views/BlogPost/BlogPost.scss
+++ b/src/views/BlogPost/BlogPost.scss
@@ -2,9 +2,17 @@
 @import "src/styles/variables/colors";
 
 .blogPost {
+  overflow: hidden;
+
   &__content {
+    $heading-levels: 6, 5, 4, 3, 2, 1;
     @media only screen and (min-width: $desktopScreen) {
       padding: 0 25%;
+      @each $level in $heading-levels {
+        h#{$level} {
+          margin-top: 0.25em;
+        }
+      }
     }
     padding: 0 3rem;
 
